<resources>
    <string name="app_name">失智長輩穿戴關懷系統</string>

    <!--homeFragment-->
    <string name="high_hr">心率偏高</string>
    <string name="reason">焦慮、運動、藥物影響</string>

    <string name="laydown">臥姿</string>
    <string name="recentGood">近期狀況良好</string>
    <string name="tooFar">距離過遠！請注意患者動向</string>

    <!-- menu:drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_drawer_profile">我的資料</string>
    <string name="menu_drawer_settingHW">設定身高體重</string>
    <string name="menu_drawer_bluetooth">藍牙連接</string>
    <string name="menu_drawer_language">語言設定</string>

    <!-- menu:bottom navigation -->
    <string name="menu_home">即時數據</string>
    <string name="menu_health">健康分析</string>
    <string name="menu_test">照護排程</string>
    <string name="menu_book">照護百科</string>
    <string name="menu_settings">設定</string>

    <!-- setting -->
    <!--    <string name="setting_profile">編輯個人資料</string>-->
    <!--    <string name="setting_heightWeight">編輯身高體重</string>-->
    <!--    <string name="setting_tutorial">系統使用教學</string>-->
    <!--    <string name="setting_language">語言選擇</string>-->
    <!--    <string name="setting_bluetooth">藍芽設定</string>-->

    <!-- home -->
    <string name="home_text_previousHR">當前心率：</string>
    <string name="home_text_goalStep">距離今日目標還有：</string>
    <string name="home_text_hrUnit">bpm</string>
    <string name="home_text_expect">理想值：</string>
    <string name="home_text_dash"> ~ </string>

    <!-- bluetooth -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <!-- bluetooth device -->
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- book-->
    <string name="mci_content">輕度知能障礙之病患面臨較為複雜的工作任務或社會環境下會有問題，但簡易之日常生活並無影響。因此MCI可視為退化為失智症的過渡期。MCI病患每年約有10%至15%轉變成失智症，遠超過正常對照組的1%到2%。因此MCI可視為退化為失智症的過渡期、或是危險因素。</string>

    <string name="exercise1">在MCI 的藥物治療上，各國正在展開各種藥物實驗，其中包括乙醯膽鹼脢拮抗劑（ACE inhibitor）、維他命E等。除了藥物外，目前學界認為認知訓練與運動訓練，可減緩MCI惡化成失智症的進程。目前市面上的商業化認知訓練軟體，大多是針對注意力、記憶力、執行控制能力、與視覺空間廣度等進行訓練。通常這些訓練必須要是大量、密集、且持續數個月，以增進其認知功能(Anguera et al., 2013)。但是電腦化的訓練模式比較常被詬病的一點是，訓練效果常常只能在訓練的單一向度上看到，而無法類化到其他向度。另一方面，運動可以增加記憶力與學習力的效果，是大家較為熟悉的。其中的機制是運動可以引發整體的新陳代謝，並調節生長因子，例如brain-derived neurotrophic factor (BDNF)，幫助維持細胞的生理反應、以及促進神經再生(Adlard et al., 2005)。Willey 等研究者 (2016)在一個以健康的中老年人族群為基礎的研究中指出，比起有規律運動者，沒有運動者在五年後產生認知退化的比率，顯著高於有運動的老人家。顯然運動對於老人家的認知衰退，扮演保護因子的角色。至於運動對於MCI療效的研究，過去研究大多聚焦於中強度的有氧運動訓練為主</string>
    <string name="exercise2">開始有越來越多的研究指出，相較於單一訓練模式，在運動時融入認知成分以增加挑戰性時，可以引發更多的神經活化(Fabel et al., 2009; Langdon and Corbett, 2012)。目前結合式認知與運動訓練主要有兩種形式─依次進行運動訓練及認知訓練(順序性訓練)或在雙重任務模式下同時結合兩種訓練進行(同時性訓練)。順序性或同時性訓練似乎均可以提供參與者不同程度的認知挑戰，然而目前仍不清楚哪種組合方式具有較好的訓練效果，仍為研究者欲解決的議題。</string>
    <string name="exercise_advice1">(一)、有氧運動：散步、騎腳踏車、爬樓梯、游泳等運動，都具有效果。考量老年人的體力，適度的進行，只要能達到 “臉紅心跳” 的程度即可。在心跳速率增加，而且有一點喘的運動強度下，持續進行45分鐘以上，每週至少3次。根據研究，在這樣的運動條件之下，連續進行8週，能夠明顯改善失智及情緒的症狀。</string>
    <string name="exercise_advice2">(二)、重量訓練：在健身房的設備與專業體適能指導員的輔助下，舉重與肌力訓練能明顯改善失智的症狀。雖然在家裡並不是都有這些專業設備與人員，還是可以進行較為簡易的重量訓練。讓老人家坐在椅子上，以雙腿緩慢抬起裝滿水的大型保特瓶，再緩慢放下，進行8次後務必休息3分鐘。如此重複5次。雖然看似麻煩，然而有照顧者的鼓勵與陪伴，能夠增進老年人的信心，更讓老年人願意參與運動。此外，在進行散步的過程中，讓長者自行攜帶飲用水(小瓶礦泉水)，讓他拿在手上，散步時可同時揮動手臂，或是做出舉啞鈴的動作。看似簡單的動作，亦能達到阻力訓練的效果。坊間亦有彈力帶的器材，具有使用簡單、價格便宜的便利性，使用方式可諮詢復健科醫師或本校運動醫學系。</string>
    <string name="exercise_advice3">(三)、平衡訓練：老年失智症患者較正常老年人有更容易跌倒。平衡訓練能夠強化肌力、增進動作協調性，進而減少跌倒的機會，降低骨折的傷害。太極拳、外丹功、瑜珈等運動，可以訓練老年人的平衡能力，更能提供有氧運動與重量訓練的助益。</string>
    <string name="exercise_last">從事運動時，老年人應該依據個人身體功能與體能狀況設定計劃。由於老年人的身體機能衰退，因此在進行運動前，家屬應事先告知醫師，以了解身體的疾病狀況(高血壓、心血管疾病、糖尿病、氣喘)，並且須清楚藥品使用的副作用，尤其某些藥品會產生暈眩或是沮喪、疲勞、虛弱等症狀，這些都須要事先了解，才有益於運動處方的設計。唯有正確的醫療與照護，方能改善失智者的病況，不但可以降低醫療與照顧的費用，也可提升失智者與照顧者的生活品質。</string>
    <string name="exercise_start">失智症好發於老年人，且隨著年齡層愈高，其盛行率也愈高。老年失智症並非正常的老化現象，真正的原因不明，其特徵為中樞腦神經組織產生退化現象而形成腦組織萎縮。得到老年失智症的人會漸漸的喪失記憶並且出現語言和情緒上的障礙。嚴重時，病患會喪失生活自理的能力。目前對失智症仍無特效藥，藥物以精神行為治療為主，但改善的效果有限，無法完全康復。服用藥物之後，可明顯改善攻擊、妄想等行為症狀，使得患者合作度變高，進而大幅減輕照顧者的負擔。</string>
    <string name="exercise_start2">服用藥物治療老年失智症是必須的，然而讓患者善用剩餘的腦力，保存患者的自我照顧能力，多多安排活動，包括聽音樂、養寵物、種花等行為療法，亦能夠改善疾病的進展。此外，規律運動已經被證實具有預防及改善老年失智症的效果，然而要如何做運動才能有效果，在此提供一些建議。</string>

    <string name="care_advice">失智症個案有其特殊醫療照護需求，包括： </string>
    <string name="care_advice1">1. 不同病程階段需求改變，應依照失智症嚴重度從極輕度、輕度、中度、重度，提供不同的醫療與照護。</string>
    <string name="care_advice2">2. 大部分之失智症患者已經失去自我照顧能力，完全需仰賴照顧者，而且常有行為與心理障礙，照顧上非常困難。所以照顧者需要予以特別支持照顧，方能提高病人以及照顧者之生活品質。</string>
    <string name="care_advice3">3. 由於失智症病人經診斷後，照護時間長久，其平均存活約8～10年，因此需要長期之照護。照顧者需因應患者之改變而學習不同之照護技巧與知識；且眼見病人持續惡化，照顧者亦身心耗竭。 </string>
    <string name="care_advice4">4. 由於病人之認知功能退步，加上其精神症狀與行為問題，對於目前門診空間擁擠與就醫流程快速繁瑣，多會排斥，以致於增加醫療照護困難度。</string>
    <string name="care_advice5">5. 評估與診斷耗時，需要由失智症患者本身與照顧者得到各類訊息；同時需有繁多之檢驗檢查，以確立診斷。</string>
    <string name="care_advice6">6. 目前有許多非藥物治療，在文獻報導為有效。因此，在醫療服務中，應提供此類非藥物治療資訊給病人，或透過間接教導照顧者，於居家提供相關治療。 </string>
    <string name="care_advice7">7. 病情與藥物種類複雜。由於老年人通常有許多共病，關係複雜，且身體虛弱，更需要多種藥物治療之專業。 </string>

    <string name="health_hr1">服用心臟特殊藥物前需監測脈搏，當脈搏小於60次/分，應評估暫停用藥。</string>
    <string name="health_hr2">當脈搏>100次，稱為心跳過速；脈搏小於60次，稱為心搏過緩</string>
    <string name="health_hr3">過快或過慢的心跳為身體一時的代償反應，有時卻是嚴重心臟問題的表徵。</string>
    <string name="health_hr4">有心血管疾病者，應密切觀察並及早送醫處理。</string>
    <string name="health_hr5">可能影響脈搏的疾病與情況：甲狀腺功能異常、休克、疼痛、情緒、心臟病及傳染病等，均會引起脈搏增快或減慢。</string>

    <string name="train_content">運用輔助教具、日常生活器具或其他自製器材、海報等，設計認知活動，幫助失智症者動動腦、減緩認知功能退化。過程常搭配結合感官刺激、現實導向活動。認知功能障礙為失智症的主要症狀，認知訓練希望即使在疾病的影響下，長輩仍然可以藉由日常活動的重新安排，建立參與活動的習性，以保持最大可能的獨立功能並面對調適失智症帶來之困擾。</string>
    <string name="train_item"></string>
    
    <string name="common_symptom_content">失智症是一個進行性退化的疾病，從輕度時期的輕微症狀，逐漸進入中度、重度、末期症狀，疾病退化的時間不一定，有個別差異。瞭解疾病的病程與症狀，可以幫助患者、家屬預做準備，以因應疾病帶來的生活變化。\n
        失智症的病程，可分為輕度知能障礙、輕度（初期）、中度（中期）、重度（晚期）。\n
        輕度知能障礙（Mild Cognitive Impairment）為正常老化到失智症開始出現徵兆之間，存在著一個過渡區域。MCI在臨床上每年約有10％-15％會發展為失智症，面臨較為複雜的工作任務或社會環境下會有問題，但簡易之日常生活並無影響。</string>
    <string name="common_symptom_item1">1.常忘了東西放在哪裡。\n
        2.時常在找東西。\n
        3.忘記跟別人之間的約會。\n
        4.忘記別人跟他講過的事情。\n
        5.比較不能記住最近發生的事情。\n
        6.弄不清楚現在是幾年幾月幾日。</string>
    <string name="common_symptom_item2">只有在光線照明不佳陰雨、夜間才容易發生誤認現象。</string>
    <string name="common_symptom_item3">情緒起伏比以前大，例如：會因遍尋不著想要的東西而生氣。</string>
    <string name="common_symptom_item4">1.變得猶豫不決，對事情難以下決定。\n
        2.變得多疑、猜忌。\n
        3.變得膽小、內向。\n
        4.變得孤僻、暴躁、愛發脾氣。</string>
    <string name="common_symptom_item5">1.言語表達出現困難，講話不如以前流暢。\n
        2.想不起來要講什麼或想不起來某件物體的名稱。</string>
    <string name="common_symptom_item6">1.在不常去的地方會迷路。\n
        2.搭乘大眾運輸工具會下錯站。</string>
    <string name="common_symptom_item7">1.懷疑配偶不忠。\n
        2.憂心會被家屬遺棄。\n
        3.被迫害妄想，認為鄰居會傷害他或偷他東西</string>
    <string name="common_symptom_item8">看到房間裡有人，可能是熟識者、已死去家屬或不認識的人。有時會看到昆蟲、蛇等令人感到不愉快的東西。</string>
    <string name="common_symptom_item9">1.坐立不安，不停走動。\n
        2.想要離開家裡到外面去。</string>
    <string name="common_symptom_item10">1.重複動作，例如不斷地把東西收進櫃子又拿出來等。\n
        2.同樣問題重複問很多遍。</string>
    <string name="common_symptom_item11">日夜顛倒，夜間起來遊走或從事其他活動</string>
    <string name="common_symptom_item12">1.變得不愛出門。\n
        2.對之前從事的活動顯得興趣缺缺。</string>
    <string name="common_symptom_item13">1.吃過了之後還表示要再吃東西。\n
        2.飲食方面可能需要別人協助。</string>
    <string name="common_symptom_item14">1.對於複雜的生活功能發生障礙，例如錢財管理出錯、烹調能力下降等。\n
        2.對器物的使用能力下降。例如時常打錯電話等。\n
        3.判斷力和工作能力逐漸減退。</string>
    <string name="common_symptom_item15">在選擇衣服上顯得猶豫不決。</string>


</resources>
