<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_drawer_profile" />
        <item
            android:id="@+id/drawer_settingHW"
            android:icon="@drawable/ic_baseline_list_alt_24"
            android:title="@string/menu_drawer_settingHW" />
        <item
            android:id="@+id/drawer_bluetooth"
            android:icon="@drawable/ic_baseline_bluetooth_24"
            android:title="@string/menu_drawer_bluetooth" />
        <item
            android:id="@+id/drawer_language"
            android:icon="@drawable/ic_baseline_language_24"
            android:title="@string/menu_drawer_language" />


    </group>

</menu>