<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".book.CareAdvice"
    android:background="@color/mainBG">

    <TextView
        android:id="@+id/care_advice_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="20sp"
        android:textColor="@color/lightWhiteBlue"
        android:background="@drawable/title_style"
        android:text="照護建議" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/care_advice_title">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/care_advice_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/book_content_style"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/lightGrey"
                android:text="@string/care_advice"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/care_advice_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/care_advice_item1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_item_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/care_advice1"
                    />
                <TextView
                    android:id="@+id/care_advice_item2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_item_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/care_advice2"
                    />
                <TextView
                    android:id="@+id/care_advice_item3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_item_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/care_advice3"
                    />
                <TextView
                    android:id="@+id/care_advice_item4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_item_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/care_advice4"
                    />
                <TextView
                    android:id="@+id/care_advice_item5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_item_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/care_advice5"
                    />
                <TextView
                    android:id="@+id/care_advice_item6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_item_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/care_advice6"
                    />
                <TextView
                    android:id="@+id/care_advice_item7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_item_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/care_advice7"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>