<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".book.HealthHr"
    android:background="@color/mainBG">

    <TextView
        android:id="@+id/health_hr_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="20sp"
        android:textColor="@color/lightWhiteBlue"
        android:background="@drawable/title_style"
        android:text="健康心率" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/health_hr_title">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/health_hr_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/book_content_style"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="健康年長者心率：60∼100次／分"
                android:textColor="@color/lightGrey"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/health_hr_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/health_hr_item1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_item_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/health_hr1"/>
                <TextView
                android:id="@+id/health_hr_item2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/book_item_style"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/lightGrey"
                android:text="@string/health_hr2"/>
                <TextView
                    android:id="@+id/health_hr_item3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_item_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/health_hr3"/>
                <TextView
                    android:id="@+id/health_hr_item4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_item_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/health_hr4"/>
                <TextView
                    android:id="@+id/health_hr_item5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_item_style"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/lightGrey"
                    android:text="@string/health_hr5"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>